syntax = "proto3";
option go_package = "simple_warehouse/product_manager/api";

package simple_warehouse.project_manager.api;

import "validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ProductManager {
  rpc Import(ImportRequest) returns (google.protobuf.Empty) {}
  rpc Export(ExportRequest) returns (ExportResponse) {}
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
}

message ShelfQuantity {
  string shelf_name = 1 [(validate.rules).string.min_len = 1];
  int64 quantity = 2; // < 0 for all
}

message ImportRequest {
  string sku = 1 [(validate.rules).string.min_len = 1];
  string name = 2 [(validate.rules).string.min_len = 1];
  google.protobuf.Timestamp expired_date = 3;
  string category = 4;
  repeated ShelfQuantity shelf_quantities = 5 [(validate.rules).repeated.min_items = 1];
}

message ExportRequest {
  string sku = 1 [(validate.rules).string.min_len = 1];
  repeated ShelfQuantity shelf_quantities = 2 [(validate.rules).repeated.min_items = 1];
}

message ExportResponse {
  repeated ShelfQuantity shelf_quantities = 1;
}

message GetProductRequest {
  string sku = 1 [(validate.rules).string.min_len = 1];
}

message GetProductResponse {
  string sku = 1;
  string name = 2;
  repeated ShelfQuantity shelf_quantities = 3;
  google.protobuf.Timestamp expired_date = 4;
  string category = 5;
}
